--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
-  "mainAdminId": 66478514,
-  "logChatId": -1001665705393,
+  "mainAdminId": 1926090919,
+  "logChatId": 1926090919,
   "stickerLinkPrefix": "t.me/addstickers/",
   "charTitleMax": 35,
   "premiumCharTitleMax": 64,
