--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "mainAdminId": 1926090919,
-  "logChatId": 1926090919,
+  "logChatId": -1001548747568,
   "stickerLinkPrefix": "t.me/addstickers/",
   "charTitleMax": 35,
   "premiumCharTitleMax": 64,
