--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+BOT_TOKEN="5269084692:AAFEPmt7PdfjhPLcawf9irSSoNMWzXi0uCY"
+MONGODB_URI="mongodb+srv://vasu:vasu@cluster0.ytifzrf.mongodb.net/?retryWrites=true&w=majority"
 PROVIDER_TOKEN="123456789:TEST:i1234567890"
