--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN="5269084692:AAFEPmt7PdfjhPLcawf9irSSoNMWzXi0uCY"
-MONGODB_URI="mongodb+srv://vasu:vasu@cluster0.ytifzrf.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://admin:admin@op.0vuurj7.mongodb.net/?retryWrites=true&w=majority"
